...
            modifier = Modifier
                .fillMaxWidth()
                .padding(vertical = 20.dp),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Text(
                text = "فهرس الأبواب والموضوعات",
                fontSize = 20.sp,
                fontWeight = FontWeight.Bold,
                color = Color(0xFF064E3B)
            )
            Spacer(Modifier.height(4.dp))
            Text(
...
